--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.4",
+    "sequelize": "^6.31.0"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.3",
